Added new page "Add Payment" using inheritance

--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -1,12 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang='en'>
-    <head>
-        <title>Search</title>
-        <link rel="stylesheet" href="{% static 'search/styles1.css' %}">
-        
-    </head>
-    <body>
+{% extends "search/layout.html" %}
+
+
+
+{% block body %}
         <h1>Search for payment </h1>
 
         <div>
@@ -90,5 +86,5 @@
             </tbody>
 
         </table>
-    </body>
-</html>
+{% endblock %}
+
