--- a/search/templates/search/layout.html
+++ b/search/templates/search/layout.html
@@ -7,6 +7,8 @@
         
     </head>
     <body>
+        <a href= "{% url 'index' %}">Search for payments</a>
+        <a href= "{% url 'addpayment' %}">Add Payment</a>
         {% block body %}
         {% endblock %}
 
