--- a/search/templates/search/addpayment.html
+++ b/search/templates/search/addpayment.html
@@ -2,9 +2,10 @@
 
 {% block body %}
     <h1>Add payment</h1>
-    <form>
+    <form action="{% url 'search:addpayment' %}" method="post">
+        {% csrf_token %}
         <div>
-            <input type="text" placeholder="Add something" name="addPayment">
+        {{ form }}
             <input type="submit" value="Add">
         </div>
     </form>
